--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-   
 </head>
 <body>
+<div class="container">
+
+
+    <h2>TODO LIST</h2>
+
+    <input type="text" id="taskInput" placeholder="Search note..." >
+     <img class="photo" src="Vector (1).svg" alt="">
+    <button id="addTaskButton">SEND</button>
+    <button id="imgg" class="theme-button">🌙</button> 
+
     
+<div id="tasks"></div>
 
-  <div class="container">
- <input class="inp" type="text " id="text"  placeholder="Enter your number">
- <button class="btn" id="send">Send</button>
-  </div>
-<div class="counter">
-    <button id="decrease">-</button>
-    <span id="nul">19</span>
-    <button  id="increase">+</button>
 </div>
-
 
     <script src="script.js"></script>
 </body>
